crates/vvv/tests/corpus/snapshots/ts__impact__human.snap
---
source: crates/vvv/tests/corpus.rs
expression: "corpus.run(args, false)"
---
exit 0
--- stdout ---
impact area
--- stderr ---
∅ no module imports it
