crates/vvv/tests/corpus/snapshots/ts__impact__json.snap
---
source: crates/vvv/tests/corpus.rs
expression: "self.run(args, true)"
---
exit 0
--- stdout ---
{"result":{"address":{"package":"","path":["src","util.ts","area"]},"consumers":[],"name":"area"},"schema":1,"status":"ok"}
--- stderr ---
